--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "prepare": "husky"
   },
   "dependencies": {
-    "nuxt": "^3.13.0",
+    "nuxt": "3.13.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.6.0",
     "vue": "latest",
     "vue-router": "latest"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "devDependencies": {
+    "@nuxt/eslint": "^0.5.7",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "husky": "^9.1.6",
+    "vue-tsc": "^2.1.6"
+  }
 }
